made it so PokemonSpriteParser now operates in accordance with CodeBinary now being a lock